feat: New feature progress and Update swagger
